# autodrive-vla-project

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
data/: README.md
docs/: experiment_log.md  interview_guide.md  roadmap.md
scripts/: demo_policy.py  eval.py  train.py
src/autodrive_vla/: __init__.py  config.py  data.py  model.py  policy.py  torch_dataset.py  torch_model.py
tests/: test_smoke.py
