[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autodrive-vla"
version = "0.1.0"
description = "A starter repository for Vision-Language-Action research in autonomous driving."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
